--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "next": "15.2.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
+        "socket.io": "^4.8.1",
+        "socket.io-client": "^4.8.1",
         "unique-names-generator": "^4.7.1"
     },
     "devDependencies": {
