--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-  publish = ".next"
-  command = "npm run build"
+  publish = "build/"
+[[redirects]]
+  from = "*"
+  to = "/index.html"
+  status = 200
