--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
-    "type": "module",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
@@ -10,22 +9,25 @@
         "eject": "react-scripts eject"
     },
     "dependencies": {
+        "@tailwindcss/postcss": "^4.0.15",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^13.5.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-router-dom": "^7.4.0",
         "react-scripts": "5.0.1",
         "socket.io-client": "^4.8.1",
         "socket.io-json-parser": "^3.0.0"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.18",
+        "autoprefixer": "^10.4.21",
         "eslint": "8.57.1",
         "eslint-config-next": "15.2.0",
-        "postcss": "^8.4.36",
-        "tailwindcss": "^3.4.1"
+        "postcss": "^8.5.3",
+        "postcss-loader": "^8.1.1",
+        "tailwindcss": "^4.0.15"
     },
     "eslintConfig": {
         "extends": [
